--- a/deme_django/static/less/deme/page-layout.less
+++ b/deme_django/static/less/deme/page-layout.less
@@ -3,7 +3,6 @@ body {
 }
 
 .page-layout {
-  margin-top: 10px;
   * {
     word-wrap: break-word; // this is breaking jqgrid, probably need to be more specific
   }
